scroll to top function fix, css optimize

--- a/front/src/styles/react-confirm.css
+++ b/front/src/styles/react-confirm.css
@@ -43,6 +43,11 @@ body.react-confirm-alert-body-element {
   box-shadow: 0 20px 75px rgba(0, 0, 0, 0.13);
   color: #666;
   font-weight: 600;
+
+  @media screen and (max-width: 720px) {
+    width: 92vw
+  }
+
 }
 
 .react-confirm-alert-svg {
