--- a/front/src/styles/react-confirm.css
+++ b/front/src/styles/react-confirm.css
@@ -34,7 +34,7 @@ body.react-confirm-alert-body-element {
 }
 
 .react-confirm-alert-body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Pretendard, Arial, Helvetica, sans-serif;
   width: 400px;
   padding: 30px;
   text-align: left;
